
(rule
 (targets coq-pkgs)
 (deps
  (package coq-promising-lib)
  (package coq-promising-coq)
  (:json jscoq-promising.json))
 (action
  (run npx %{env:pkgtool=jscoq} build %{json}
                    --load ../snu-sflib/coq-pkgs/snu-sflib.coq-pkg
                    --load ../paco/coq-pkgs/paco.coq-pkg)))

(alias
 (name all)
 (deps package.json))

(dirs workdir)
